#336: further open up native access for maven builds