@@ -3,3 +3,4 @@
 -XX:+UseG1GC
 -Dfile.encoding=UTF-8
 --sun-misc-unsafe-memory-access=allow
+--enable-native-access=ALL-UNNAMED
